fix nav button so it stays visible when scrolling down

--- a/styles/style.css
+++ b/styles/style.css
@@ -35,3 +35,13 @@ height: 100vh;
 .hide-nav {
 	top: 94%;
 }
+.nav-button {
+	font-size: 2em;
+	margin: 30px auto;
+	width: 100%;
+	position: fixed;
+	background-color: rgba(255,255,255, 0.4);
+}
+.margin-top-sml {
+	margin-top: 11%;
+}
